--- a/src/components/Floater.astro
+++ b/src/components/Floater.astro
@@ -71,7 +71,7 @@ const isActive = (href: string) => {
     width: 100%;
     height: 5px;
     background-image: linear-gradient(transparent, transparent), 
-                     linear-gradient(rgb(147 51 234), rgb(147 51 234));
+    linear-gradient(#155dfc, #155dfc);
     background-size: 100% 5px;
     background-position: 0 100%;
     background-repeat: no-repeat;
