--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,18 +13,19 @@ import { Image } from "astro:assets";
       {" "}
       <span class="font-bold">José Donato</span>{" "}<span class="wave">👋</span>
     </h1>
-    <p class="text-xs text-zinc-500 dark:text-zinc-300 mt-4">
-      I'm a Fullstack Engineer from Portugal with a master's degree in
-      Informatics Security and bachelor in Computer Science. Currently working
-      remotely at OpenBB. I frequently post about web, crypto, AI, and open source on
-      <a href="https://twitter.com/josedonato__" target="_blank" rel="noopener noreferrer" class="link">Twitter</a>
-      and
-      <a href="https://www.linkedin.com/in/jose-donato" target="_blank" rel="noopener noreferrer" class="link">LinkedIn</a>.
-      Follow me there to stay updated!
-      My main interests are <span class="underline-animation">web development</span> and <span class="underline-animation">quant trading</span>.
-      <br /> Want to have a quick chat? You can DM me on Twitter or LinkedIn, or
-      <a href="mailto:zmcdonato@gmail.com" target="_blank" rel="noopener noreferrer" class="link">email me</a>.
+    <div class="flex flex-col gap-1 text-sm text-zinc-500 dark:text-zinc-300 mt-4">
+      <p>
+        I'm a Fullstack Engineer from Portugal with a master's degree in
+        Informatics Security and bachelor in Computer Science. Currently working
+      remotely at OpenBB. 
     </p>
+    <p>
+      My main interests are <span class="underline-animation">web development</span> and <span class="underline-animation">quant trading</span>.
+    </p>
+    <p>
+      Want to have a quick chat? You can DM me on Twitter, LinkedIn, or email me.
+      </p>
+      </div>
     <div class="flex gap-3 mt-4 items-end">
       {
         SOCIALS.map((social) => (
@@ -73,13 +74,6 @@ import { Image } from "astro:assets";
     background-size: 100% 2px;
     background-position: 0 100%;
     background-repeat: no-repeat;
-    transition: background-size 0.5s ease-in-out;
     rotate: -2deg;
-    animation: animateUnderline 1s;
-  }
-
-  @keyframes animateUnderline {
-    0% { background-size: 0% 2px; }
-    50% { background-size: 100% 2px; }
   }
 </style> 
